<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityDownloadMusic"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="270dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zzonawavani2" />

    <Button
        android:id="@+id/buttonDownloadOne"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="@+id/textViewDowloadOne"
        app:layout_constraintTop_toBottomOf="@+id/textViewDowloadOne" />

    <TextView
        android:id="@+id/textViewDowloadOne"
        android:layout_width="149dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/salaamito"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textViewDowloadTwo"
        android:layout_width="207dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:text="@string/giraffeLanguage"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDownloadOne" />

    <Button
        android:id="@+id/buttonDownloadTwo"
        android:layout_width="123dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/download"
        app:layout_constraintEnd_toEndOf="@+id/textViewDowloadTwo"
        app:layout_constraintTop_toBottomOf="@+id/textViewDowloadTwo" />

    <ProgressBar
        android:id="@+id/progressBarOne"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDownloadTwo" />

</androidx.constraintlayout.widget.ConstraintLayout>